llvm-gcc-4.2-2.9/gcc/testsuite/obj-c++.dg/syntax-error-9.mm
/* APPLE LOCAL file radar 6271728 */
/* Check for error reporting of bad method definition. */
@interface MyClass 
@end


@implementation MyClass
- (void) ni
@end	/* { dg-error "expected `\{' before \\'end\\'" } */
